...
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_30sdp"
            android:text="@string/we_will_help_you_to_grow_your_business_using_online_service"
            android:textAlignment="center"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintBottom_toTopOf="@id/btnLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
...
